--- a/EduMap_UK/chfrontend/templates/chfrontend/base.html
+++ b/EduMap_UK/chfrontend/templates/chfrontend/base.html
@@ -1,3 +1,5 @@
+
+
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -12,7 +14,12 @@
   {% block js_links %}{% endblock %}
   
   <div id="content">
-    {% block content %}{% endblock %}
+   
+    {% block content %}
+<h1>Bem-vindo à Página Base</h1>
+{% endblock %}
   </div>
 </body>
 </html>
+
+
