--- a/EduMap_UK/chfrontend/templates/chfrontend/places_base.html
+++ b/EduMap_UK/chfrontend/templates/chfrontend/places_base.html
@@ -21,10 +21,11 @@
     <div class="column-menu" id="menu-information">
       <p id="menu_title">Prezado estudante! Bem vindo ao EduMap_UK</p>
       
-      <img id='placeimage' src="./media/place_images/lon.webp" alt="London image">
+      <img id='placeimage' src="/media/place_images/lon.jpg" alt="London image">
       
       <p id="menu_text"></p>
     </div>
   </div>
 </div>
 {% endblock %}
+
