--- a/EduMap_UK/chfrontend/templates/chfrontend/base.html
+++ b/EduMap_UK/chfrontend/templates/chfrontend/base.html
@@ -7,19 +7,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}EduMap_UK{% endblock %}</title>
   <!-- CSS -->
-  {% block css_links %}{% endblock %}
+  {% block css_links %}
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+ 
+  {% endblock %}
+
+
 </head>
 <body>
   <!-- JSS -->
   {% block js_links %}{% endblock %}
-  
+
+
+
   <div id="content">
-   
-    {% block content %}
-<h1>Bem-vindo à Página Base</h1>
-{% endblock %}
+  {% block content %}
+
+
+
+  <h1>Bem-vindo à Página Base</h1>
+  {% endblock %}
   </div>
+
+
+  
+  
+  
+
+
+ 
 </body>
+
+
+
 </html>
 
 
