páginas Experiências Anteriores

--- a/EduMap_UK/chfrontend/templates/chfrontend/places_base.html
+++ b/EduMap_UK/chfrontend/templates/chfrontend/places_base.html
@@ -14,10 +14,6 @@
 
 {% block content %}
 
-<<<<<<< HEAD
-=======
-
->>>>>>> fe5208ff891556a6d785ae0dee2c775a13fb0bed
 <div class="container py-3">
   <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
     <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
@@ -26,22 +22,12 @@
     </a>
 
     <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-<<<<<<< HEAD
      <a class="py-2 link-body-emphasis text-decoration-none me-3" href="{% url 'chfrontend:listar_cursos' %}">Experiências Anteriores</a>
      <a class="py-2 link-body-emphasis text-decoration-none" href="{% url 'chfrontend:logout' %}">Sign out</a>
-=======
-    
-     <a class="py-2 link-body-emphasis text-decoration-none" href="{% url 'chfrontend:logout' %}">Sign out</a>
-
->>>>>>> fe5208ff891556a6d785ae0dee2c775a13fb0bed
     </nav>
   </div>
 </div>
 
-<<<<<<< HEAD
-
-=======
->>>>>>> fe5208ff891556a6d785ae0dee2c775a13fb0bed
 <div class="container py-3">
 <div class="container-fluid">
   <div class="row">
@@ -63,7 +49,7 @@
     <div class="col-md-6">
       <div class="card mb-4 border-0 shadow">
         <div class="card-header py-3 bg-success text-white">
-          <h4 class="my-0 fw-normal">Informações</h4>
+          <h4 class="my-0 fw-normal">Informações Gerais</h4>
         </div>
         <div class="card-body bg-light" style="min-height: 600px;">
           <div class="container">
